--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./css/style.css" />
-    <title>DOM Tutorial by LWS</title>
+    <title>DOM-Project</title>
   </head>
 
   <body>
@@ -17,11 +17,11 @@
     <nav class="nav">
       <div class="brand-area container">
         <a href="index.html" class="brand">
-          <img src="./images/logo.png" alt="programming hero Logo" />
+          <img src="./images/logo.png" alt="" />
         </a>
       </div>
       <div class="avatar">
-        <img src="./images/hk.jpg" alt="LWS Logo" />
+        <img src="./images/hk.jpg" alt="" />
         <p>HK</p>
       </div>
     </nav>
